--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <div class="container-fluid position-relative bg-white d-flex p-0">
+    <div id="app" class="container-fluid position-relative bg-white d-flex p-0">
         
         <!-- Content Start -->
         <div class="content">
@@ -60,5 +60,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/build.js"></script>
 </body>
 </html>
