[FE] partner page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,3 +275,15 @@
     background: var(--dark);
     border-color: var(--primary);
 }
+
+#partner-tbl thead tr th:last-child {
+    width: 200px;
+}
+#partner-tbl .title {
+    position: relative;
+}
+#partner-tbl .title .btn-add{
+    position: absolute;
+    right: 0;
+    top: -10px;
+}
