--- a/views/partials/side-bar.hbs
+++ b/views/partials/side-bar.hbs
@@ -27,6 +27,15 @@
                     <a href="/element" class="dropdown-item">Other Elements</a>
                 </div>
             </div>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                        class="fa fa-laptop me-2"></i>Elements</a>
+                <div class="dropdown-menu bg-transparent border-0">
+                    <a href="/users" class="dropdown-item">Users</a>
+                    <a href="/partner" class="dropdown-item">Partner</a>
+                    <a href="/element" class="dropdown-item">Other Elements</a>
+                </div>
+            </div>
             <a href="/widget" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
             <a href="/form" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
             <a href="/table" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
