--- a/views/partials/side-bar.hbs
+++ b/views/partials/side-bar.hbs
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="navbar-nav w-100">
-            <a href="/index" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+            <a href="/" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
                         class="fa fa-laptop me-2"></i>Elements</a>
@@ -32,13 +32,13 @@
             <a href="/table" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
             <a href="/chart" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
             <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"><i
-                        class="far fa-file-alt me-2"></i>Pages</a>
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i 
+                class="fa fa-gamepad"></i>Games</a>
                 <div class="dropdown-menu bg-transparent border-0">
                     <a href="/signin" class="dropdown-item">Sign In</a>
                     <a href="/signup" class="dropdown-item">Sign Up</a>
-                    <a href="/404" class="dropdown-item">404 Error</a>
-                    <a href="/blank" class="dropdown-item active">Blank Page</a>
+                    <a href="/spinner" class="dropdown-item">Spinner Game</a>
+                    <a href="/teris" class="dropdown-item active">Teris Game</a>
                 </div>
             </div>
         </div>
