--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -30,6 +30,9 @@
     <!-- Template Stylesheet -->
     <link href="/css/style.css" rel="stylesheet">
 
+    <!-- Template Stylesheet -->
+    <link href="/css/style1.css" rel="stylesheet">
+
     <link rel="icon" type="image/jpg" href="/img/icon.jpg">
 </head>
 
