--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,13 +1,21 @@
 <!-- Sign Up Start -->
 <div class="container-fluid">
     <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
-        <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-6">
             <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
                 <div class="d-flex align-items-center justify-content-between mb-3">
-                    <a href="index.html" class="">
+                    <a href="/" class="">
                         <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>E-VOUCHER</h3>
                     </a>
                     <h3>Sign Up</h3>
+                </div>
+                <div class="form-floating mb-4">
+                    <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">
+                    <label for="floatingText">First Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">
+                    <label for="floatingText">Last Name</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">
