--- a/views/partials/side-bar.hbs
+++ b/views/partials/side-bar.hbs
@@ -18,7 +18,7 @@
         </div>
         <div class="navbar-nav w-100">
             <a href="/" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-            <div class="nav-item dropdown">
+            {{!-- <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
                         class="fa fa-laptop me-2"></i>Elements</a>
                 <div class="dropdown-menu bg-transparent border-0">
@@ -26,11 +26,20 @@
                     <a href="/typography" class="dropdown-item">Typography</a>
                     <a href="/element" class="dropdown-item">Other Elements</a>
                 </div>
+            </div> --}}
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                        class="fa fa-laptop me-2"></i>Elements</a>
+                <div class="dropdown-menu bg-transparent border-0">
+                    <a href="/users" class="dropdown-item">User</a>
+                    <a href="/partners" class="dropdown-item">Partner</a>
+                    <a href="/element" class="dropdown-item">Other Elements</a>
+                </div>
             </div>
-            <a href="/widget" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
+            {{!-- <a href="/widget" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
             <a href="/form" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
             <a href="/table" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-            <a href="/chart" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
+            <a href="/chart" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a> --}}
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i 
                 class="fa fa-gamepad"></i>Games</a>
