--- a/views/partials/side-bar.hbs
+++ b/views/partials/side-bar.hbs
@@ -29,11 +29,11 @@
             </div> --}}
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
-                        class="fa fa-laptop me-2"></i>Elements</a>
+                        class="fa fa-laptop me-2"></i>Management</a>
                 <div class="dropdown-menu bg-transparent border-0">
                     <a href="/users" class="dropdown-item">User</a>
                     <a href="/partners" class="dropdown-item">Partner</a>
-                    <a href="/element" class="dropdown-item">Other Elements</a>
+                    <a href="/campaigns" class="dropdown-item">Campaign</a>
                 </div>
             </div>
             {{!-- <a href="/widget" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
